# local-bigquery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  pre-commit.yml  pytest.yml
examples/: docker-compose.yml  testcontainers_example.py  usage.py
pybigquery/: __init__.py  main.py  models.py
scripts/: build_specs.sh
src/local_bigquery/: __init__.py  __main__.py  db.py  errors.py  main.py  models.py  repl.py  settings.py  transform.py
src/pybigquery/: __init__.py  db.py  main.py  models.py  transform.py
src/resources/: discovery.json
src/scripts/: build_specs.sh  repl  reset  run
src/specs/: google.json  openapi.yaml  swagger.yaml
tests/test_pybigquery/: test_main.py  test_transform.py
