[project]
name = "local_bigquery"
version = "0.1.0"
description = "Run BigQuery locally"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.8.1",
    "sqlglot>=26.12.1",
]

[dependency-groups]
dev = [
    "google-cloud-bigquery>=3.31.0",
    "pytest>=8.3.5",
    "sqlalchemy-bigquery>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
