[project]
name = "local_bigquery"
version = "0.1.0"
description = "Run BigQuery locally"
requires-python = ">=3.13,<3.14"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi[standard]>=0.115.12",
    "mini-racer>=0.12.4",
    "numpy>=2.2.4",
    "prompt-toolkit>=3.0.50",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pygments>=2.19.1",
    "pytz>=2025.2",
    "sqlglot>=26.12.1",
]

[dependency-groups]
dev = [
    "google-cloud-bigquery>=3.31.0",
    "pytest>=8.3.5",
    "sqlalchemy-bigquery>=1.13.0",
    "testcontainers>=4.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
